cmake_minimum_required(VERSION 3.10)

project(OdfFormatLib)

set(CORE_ROOT_DIR "${CMAKE_CURRENT_LIST_DIR}/../../..")

include(${CORE_ROOT_DIR}/common.cmake)

set(ODF_FILE_ROOT_DIR "${CMAKE_CURRENT_LIST_DIR}/../..")
set(SM_CUSTOM_SHAPE_2_OOXML_DIR "${ODF_FILE_ROOT_DIR}/Reader/Converter/SMCustomShape2OOXML")
set(STAR_MATH_2_OOXML_DIR "${ODF_FILE_ROOT_DIR}/Reader/Converter/StarMath2OOXML")

if(NOT TARGET kernel)
    add_subdirectory(${CORE_ROOT_DIR}/Common kernel)
endif()

if(NOT TARGET UnicodeConverter)
    add_subdirectory(${CORE_ROOT_DIR}/UnicodeConverter UnicodeConverter)
endif()


set(BOOST_ROOT "${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/boost/linux_64")
find_package(Boost REQUIRED COMPONENTS system filesystem regex date_time)

add_library(OdfFormatLib STATIC
    ${CMAKE_CURRENT_LIST_DIR}/odf_converter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/odf_datatypes.cpp
    ${CMAKE_CURRENT_LIST_DIR}/odf_reader.cpp
    ${CMAKE_CURRENT_LIST_DIR}/odf_writer.cpp

	${ODF_FILE_ROOT_DIR}/Common/CPColorUtils.cpp
	${ODF_FILE_ROOT_DIR}/Common/CPString.cpp
	${ODF_FILE_ROOT_DIR}/Common/logging.cpp
	${ODF_FILE_ROOT_DIR}/Common/readdocelement.cpp
	${ODF_FILE_ROOT_DIR}/Common/utils.cpp
	${ODF_FILE_ROOT_DIR}/Common/xml/attributes.cpp
	${ODF_FILE_ROOT_DIR}/Common/xml/sax_xmllite.cpp
	${ODF_FILE_ROOT_DIR}/Common/xml/sax.cpp
	${ODF_FILE_ROOT_DIR}/Common/xml/utils.cpp
	${ODF_FILE_ROOT_DIR}/Common/xml/xmlchar.cpp
	${ODF_FILE_ROOT_DIR}/Formulas/formulasconvert_odf.cpp
	${ODF_FILE_ROOT_DIR}/Writer/Converter/ConvertDrawing.cpp
	${ODF_FILE_ROOT_DIR}/Writer/Converter/Converter.cpp
	${ODF_FILE_ROOT_DIR}/Writer/Converter/ConverterChart.cpp
	${ODF_FILE_ROOT_DIR}/Writer/Converter/ConvertVml.cpp
	${ODF_FILE_ROOT_DIR}/Writer/Converter/DocxConverter.cpp
	${ODF_FILE_ROOT_DIR}/Writer/Converter/MathConverter.cpp
	${ODF_FILE_ROOT_DIR}/Writer/Converter/PptxConverter.cpp
	${ODF_FILE_ROOT_DIR}/Writer/Converter/XlsxConverter.cpp
    ${ODF_FILE_ROOT_DIR}/Formulas/formulasconvert_oox.cpp

    ${SM_CUSTOM_SHAPE_2_OOXML_DIR}/smcustomshapepars.cpp
    ${SM_CUSTOM_SHAPE_2_OOXML_DIR}/customshape.cpp

    ${STAR_MATH_2_OOXML_DIR}/cconversionsmtoooxml.cpp
    ${STAR_MATH_2_OOXML_DIR}/conversionmathformula.cpp
    ${STAR_MATH_2_OOXML_DIR}/cooxml2odf.cpp
    ${STAR_MATH_2_OOXML_DIR}/cstarmathpars.cpp

    ${ODF_FILE_ROOT_DIR}/Common/CPColorUtils.h
    ${ODF_FILE_ROOT_DIR}/Common/CPNoncopyable.h
    ${ODF_FILE_ROOT_DIR}/Common/CPOptional.h
    ${ODF_FILE_ROOT_DIR}/Common/CPScopedPtr.h
    ${ODF_FILE_ROOT_DIR}/Common/CPSharedPtr.h
    ${ODF_FILE_ROOT_DIR}/Common/CPString.h
    ${ODF_FILE_ROOT_DIR}/Common/CPWeakPtr.h
    ${ODF_FILE_ROOT_DIR}/Common/errors.h
    ${ODF_FILE_ROOT_DIR}/Common/logging.h
    ${ODF_FILE_ROOT_DIR}/Common/readdocelement.h
    ${ODF_FILE_ROOT_DIR}/Common/readstring.h
    ${ODF_FILE_ROOT_DIR}/Common/utf8cpp/utf8.h
    ${ODF_FILE_ROOT_DIR}/Common/utf8cpp/utf8/checked.h
    ${ODF_FILE_ROOT_DIR}/Common/utf8cpp/utf8/core.h
    ${ODF_FILE_ROOT_DIR}/Common/utf8cpp/utf8/unchecked.h
    ${ODF_FILE_ROOT_DIR}/Common/writedocelement.h
    ${ODF_FILE_ROOT_DIR}/Common/xml/attributes.h
    ${ODF_FILE_ROOT_DIR}/Common/xml/nodetype.h
    ${ODF_FILE_ROOT_DIR}/Common/xml/sax_xmllite.h
    ${ODF_FILE_ROOT_DIR}/Common/xml/sax.h
    ${ODF_FILE_ROOT_DIR}/Common/xml/simple_xml_writer.h
    ${ODF_FILE_ROOT_DIR}/Common/xml/utils.h
    ${ODF_FILE_ROOT_DIR}/Common/xml/xmlchar.h
    ${ODF_FILE_ROOT_DIR}/Common/xml/xmlelement.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/anchortype.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/animation_attlists.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/backgroundcolor.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/bool.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/bordermodel.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/borderstyle.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/borderwidths.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/calcext_type.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/chartdatalabelnumber.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/charterrorcategory.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/chartinterpolation.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/chartlabelarrangement.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/chartlabelposition.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/chartregressiontype.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/chartseriessource.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/chartsolidtype.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/chartsymbol.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/charttimeunit.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/clockvalue.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/color.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/common_attlists.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/custom_shape_types_convert.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/direction.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/drawangle.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/drawfill.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/dropcaplength.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/fillimagerefpoint.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/fobreak.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/fontfamilygeneric.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/fontpitch.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/fontrelief.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/fontsize.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/fontstretch.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/fontstyle.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/fontvariant.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/fontweight.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/gradientstyle.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/grandtotal.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/hatchstyle.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/hyphenationkeep.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/hyphenationladdercount.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/iconset_type.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/keeptogether.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/layoutgridmode.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/length.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/lengthorpercent.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/letterspacing.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/linebreak.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/linemode.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/linestyle.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/linetype.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/linewidth.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/markerstyle.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/mathvariant.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/messagetype.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/noteclass.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/odfattributes.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/officevaluetype.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/pageusage.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/percent.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/percentorscale.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/presentationclass.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/presentationnodetype.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/presentationvisibility.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/presetclass.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/presetid.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/punctuationwrap.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/referenceformat.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/rotationalign.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/runthrough.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/scripttype.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/shadowtype.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/smil_additive.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/smil_attributename.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/smil_fill.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/smil_keytimes.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/smil_transitiontype.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/smil_values.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/style_ref.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/stylecellprotect.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/stylefamily.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/stylehorizontalpos.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/stylehorizontalrel.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/styleleadercolor.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/stylenumformat.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/styleposition.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/styleprint.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/stylerepeat.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/styletype.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/styleverticalpos.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/styleverticalrel.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/stylewrap.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/stylewrapcontourmode.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/svg_type.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/tablealign.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/tablecentering.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/tabledatatype.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/tablemode.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/tableoperator.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/tablevisibility.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/targetframename.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/textalign.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/textalignsource.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/textautospace.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/textcombine.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/textdisplay.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/textemphasize.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/textposition.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/textrotationscale.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/texttransform.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/timeperiod.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/underlinecolor.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/verticalalign.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/wrapoption.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/writingmode.h
    ${ODF_FILE_ROOT_DIR}/DataTypes/xlink.h
    ${ODF_FILE_ROOT_DIR}/Formulas/formulasconvert.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/conversionelement.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/ConvertOO2OOX.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/docx_content_type.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/docx_conversion_context.h
    # ${ODF_FILE_ROOT_DIR}/Reader/Converter/docx_conversion_state.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/docx_drawing.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/docx_package.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/docx_table_context.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/drawing_object_description.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/headers_footers.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/hyperlinks.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/measuredigits.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/mediaitems.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/namespaces.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/oox_chart_axis.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/oox_chart_context.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/oox_chart_legend.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/oox_chart_series.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/oox_chart_shape.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/oox_chart_values.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/oox_conversion_context.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/oox_data_labels.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/oox_drawing_fills.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/oox_drawing.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/oox_layout.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/oox_package.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/oox_plot_area.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/oox_rels.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/oox_title.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/oox_types_chart.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/ooxtablerowspanned.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/pptx_animation_context.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/pptx_comments_context.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/pptx_comments.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/pptx_conversion_context.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/pptx_default_serializes.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/pptx_drawing.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/pptx_drawings.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/pptx_output_xml.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/pptx_package.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/pptx_slide_context.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/pptx_table_context.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/pptx_text_context.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_alignment.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_border.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_borders.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_cell_format.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_cell_style.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_cell_styles.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_color.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_comments_context.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_comments.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_complex_number_format.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_conditionalFormatting.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_data_validation.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_defined_names.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_drawing_context.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_drawing.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_drawings.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_dxfs.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_fill.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_fills.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_font.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_fonts.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_formula.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_hyperlinks.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_merge_cells.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_num_format_context.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_numFmts.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_output_xml.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_package.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_protection.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_row_spanned.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_sharedstrings.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_styles.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_table_metrics.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_table_position.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_table_state.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_tablecontext.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_textcontext.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_utils.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsx_xf.h
    ${ODF_FILE_ROOT_DIR}/Reader/Converter/xlsxconversioncontext.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/abstract_xml.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/all_elements.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/anim_elements.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/calcext_elements.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/calcs_styles.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/chart_build_oox.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/chart_objects.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/documentcontext.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/draw_common.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/draw_frame.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/draw_page.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/draw_shapes.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/font_face.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/header_footer.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/list.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/math_elementaries.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/math_elements.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/math_layout_elements.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/math_limit_elements.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/math_table_elements.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/math_token_elements.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/note.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/number_style.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/odf_content_xml.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/odf_document_impl.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/odf_document.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/odfcontext.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/office_annotation.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/office_binary_data.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/office_body.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/office_chart.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/office_document.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/office_drawing.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/office_elements_create.h
    # ${ODF_FILE_ROOT_DIR}/Reader/Format/office_elements_type.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/office_elements.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/office_event_listeners.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/office_forms.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/office_meta.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/office_presentation.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/office_scripts.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/office_settings.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/office_spreadsheet.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/office_text.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/paragraph_elements.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/ruby.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/search_table_cell.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/serialize_elements.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/skipelement.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/style_chart_properties.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/style_graphic_properties.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/style_map.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/style_paragraph_properties.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/style_presentation.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/style_regions.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/style_table_properties.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/style_text_properties.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/styles_list.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/styles_lite_container.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/styles.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/svg_parser.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/table_calculation_settings.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/table_database_ranges.h		
    ${ODF_FILE_ROOT_DIR}/Reader/Format/table_named_expressions.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/table.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/templates.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/text_content.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/text_elements.h
    ${ODF_FILE_ROOT_DIR}/Reader/Format/visitor.h
    ${ODF_FILE_ROOT_DIR}/Writer/Converter/Converter.h
    ${ODF_FILE_ROOT_DIR}/Writer/Converter/DocxConverter.h
    ${ODF_FILE_ROOT_DIR}/Writer/Converter/Oox2OdfConverter.h
    ${ODF_FILE_ROOT_DIR}/Writer/Converter/PptxConverter.h
    ${ODF_FILE_ROOT_DIR}/Writer/Converter/VmlShapeTypes2Oox.h
    ${ODF_FILE_ROOT_DIR}/Writer/Converter/XlsxConverter.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/abstract_xml.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/anim_elements.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/anim_elements.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/calcext_elements.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/draw_base.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/draw_frame.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/draw_page.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/draw_shapes.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/header_footer.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/list.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/math_elementaries.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/math_elements.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/math_layout_elements.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/math_limit_elements.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/math_table_elements.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/math_token_elements.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/mediaitems_utils.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/mediaitems.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/number_style.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/object_package.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_chart_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_comment_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_controls_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_conversion_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_drawing_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_lists_styles_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_math_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_notes_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_number_styles_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_page_layout_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_page_layout_state.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_rels.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_settings_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_style_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_style_state.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_table_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_table_styles_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odf_text_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odp_conversion_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odp_page_state.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odp_slide_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/ods_conversion_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/ods_table_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/ods_table_state.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/odt_conversion_context.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/office_annotation.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/office_body.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/office_chart.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/office_document.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/office_elements_create.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/office_elements_type.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/office_elements.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/office_event_listeners.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/office_forms.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/office_meta.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/office_presentation.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/office_scripts.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/office_settings.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/office_spreadsheet.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/office_text.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/oox_shape_defines.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/paragraph_elements.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/odf_shape_mapping.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/oox_shapeAccentCallouts.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/oox_shapeActionButtons.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/oox_shapeArrows.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/oox_shapeBents.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/oox_shapeCallouts.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/oox_shapeCharts.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/oox_shapeConnectors.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/oox_shapeCurvedArrows.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/oox_shapeCurvedConnectors.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/oox_shapeCustoms.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/oox_shapeMaths.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/oox_shapePrimitives.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/oox_shapeRibbons.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/oox_shapeSnipRoundRects.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/oox_shapeStars.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/Shapes/oox_shapeWordArt.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/style_chart_properties.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/style_graphic_properties.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/style_map.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/style_page_layout_properties.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/style_paragraph_properties.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/style_presentation.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/style_presentation.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/style_section_properties.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/style_table_properties.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/style_text_properties.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/styles_list.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/styles_lite_container.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/styles.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/svg_creator.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/table_data_pilot_tables.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/table_database_ranges.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/table_named_expressions.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/table.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/text_elements.h
    ${ODF_FILE_ROOT_DIR}/Writer/Format/visitor.h

    ${SM_CUSTOM_SHAPE_2_OOXML_DIR}/smcustomshapepars.h
    ${SM_CUSTOM_SHAPE_2_OOXML_DIR}/customshape.h

    ${STAR_MATH_2_OOXML_DIR}/cconversionsmtoooxml.h
    ${STAR_MATH_2_OOXML_DIR}/conversionmathformula.h
    ${STAR_MATH_2_OOXML_DIR}/cooxml2odf.h
    ${STAR_MATH_2_OOXML_DIR}/cstarmathpars.h
    ${STAR_MATH_2_OOXML_DIR}/fontType.h
    ${STAR_MATH_2_OOXML_DIR}/TextDirection.h
    ${STAR_MATH_2_OOXML_DIR}/TFormulaSize.h
    ${STAR_MATH_2_OOXML_DIR}/typeConversion.h
    ${STAR_MATH_2_OOXML_DIR}/typeselements.h
)

set_default_options(OdfFormatLib)

target_include_directories(OdfFormatLib PRIVATE
	${ODF_FILE_ROOT_DIR}/Common
)

target_precompile_headers(OdfFormatLib PRIVATE
    precompiled.h
)

target_link_libraries(OdfFormatLib PUBLIC
    UnicodeConverter
    kernel
    Boost::system
    Boost::filesystem
    Boost::regex
    Boost::date_time
)

set_property(TARGET OdfFormatLib PROPERTY POSITION_INDEPENDENT_CODE ON)

copy_boost_libs(OdfFormatLib)